force-app/main/default/objects/SPEN_ContactSnapshot__c/SPEN_ContactSnapshot__c.object-meta.xml
<CustomObject>
    <label>Contact Snapshot</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Contact Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>