force-app/main/default/objects/SPEN_ContactSnapshot__c/fields/SPEN_ContactID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Snapshot</relationshipLabel>
    <relationshipName>Contact_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>