force-app/main/default/objects/SPEN_ContactSnapshot__c/fields/SPEN_CurrentValueJSON__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CurrentValueJSON__c</fullName>
    <label>Current Value JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>