force-app/main/default/objects/SPEN_ContactSnapshot__c/fields/SPEN_PreviousValueJSON__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PreviousValueJSON__c</fullName>
    <label>Previous Value JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>